# Two-Layers-Cubed-Sphere-Shallow-Water-Model

./: .gitignore  CMakeLists.txt  README.md  run.sh
lib/netcdf/: libcrypto.1.1.dylib  libncursesw.6.dylib  libnetcdf-cxx.settings  libnetcdf-cxx4.1.1.0.dylib  libnetcdf.19.dylib  libnetcdf.settings  libzip.5.5.dylib
src/: bp_h.cpp  bp_wind.cpp  construction.cpp  construction.hpp  define.hpp  initialField.cpp  initialField.hpp  iteration.cpp  iteration.hpp  main.cpp  outputs.cpp  outputs.hpp  transform.cpp
